--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "build": "tsc",
     "format": "prettier --write \\\\\\\"lib/**/*.ts\\\\\\\"",
     "lint": "tslint -p tsconfig.json",
+    "postinstall": "npm run build",
     "prepublishOnly": "npm run test",
     "prepare": "npm run build"
   }
